--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
     </div>
     <div>
-        <a href="index1.php" class="cleardoc">空编辑器</a>
+        <a href="index1.php" class="cleardoc">清空内容</a>
         <!--<a href="javascript:clear()" class="cleardoc">清空内容</a>-->
     </div>
 </div>
